--- a/Vitkund/Views/Shared/_AdminLayout.cshtml
+++ b/Vitkund/Views/Shared/_AdminLayout.cshtml
@@ -147,7 +147,7 @@
                                     <div class="mobile-back text-end"><span>Back</span><i class="fa fa-angle-right ps-2" aria-hidden="true"></i></div>
                                 </li>
                                 <li class="sidebar-list">
-                                    <a class="sidebar-link sidebar-title" href="AdminIndex">
+                                    <a class="sidebar-link sidebar-title" href="/AdminIndex">
                                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <g>
                                                 <g>
@@ -160,7 +160,7 @@
 
                                 </li>
                                 <li class="sidebar-list">
-                                    <a class="sidebar-link sidebar-title" href="add-chapters">
+                                    <a class="sidebar-link sidebar-title" href="/add-chapters">
                                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <g>
                                                 <g>
@@ -176,7 +176,7 @@
                                 </li>
 
                                 <li class="sidebar-list">
-                                    <a class="sidebar-link sidebar-title" href="add-videos">
+                                    <a class="sidebar-link sidebar-title" href="/add-videos">
                                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <g>
                                                 <g>
@@ -191,7 +191,7 @@
                                 </li>
 
                                 <li class="sidebar-list">
-                                    <a class="sidebar-link sidebar-title" href="Add-Businessideas">
+                                    <a class="sidebar-link sidebar-title" href="/Add-Businessideas">
                                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <g>
                                                 <g>
@@ -199,12 +199,12 @@
                                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M11.9702 2.5C5.58324 2.5 4.50424 3.432 4.50424 10.929C4.50424 19.322 4.34724 21.5 5.94324 21.5C7.53824 21.5 10.1432 17.816 11.9702 17.816C13.7972 17.816 16.4022 21.5 17.9972 21.5C19.5932 21.5 19.4362 19.322 19.4362 10.929C19.4362 3.432 18.3572 2.5 11.9702 2.5Z" stroke="#130F26" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                                                 </g>
                                             </g>
-                                        </svg><span>Trending Bussiness Ideas</span>
+                                        </svg><span>Add Trending Ideas</span>
                                     </a>
 
                                 </li>
                                 <li class="sidebar-list">
-                                    <a class="sidebar-link sidebar-title" href="Add-TrendingBusiness">
+                                    <a class="sidebar-link sidebar-title" href="/Add-TrendingBusiness">
                                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <g>
                                                 <g>
@@ -216,7 +216,21 @@
                                     </a>
 
                                 </li>
-                                
+
+                                <li class="sidebar-list">
+                                    <a class="sidebar-link sidebar-title" href="/Add-Courses">
+                                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <g>
+                                                <g>
+                                                    <path d="M8.54248 9.21777H15.3975" stroke="#130F26" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M11.9702 2.5C5.58324 2.5 4.50424 3.432 4.50424 10.929C4.50424 19.322 4.34724 21.5 5.94324 21.5C7.53824 21.5 10.1432 17.816 11.9702 17.816C13.7972 17.816 16.4022 21.5 17.9972 21.5C19.5932 21.5 19.4362 19.322 19.4362 10.929C19.4362 3.432 18.3572 2.5 11.9702 2.5Z" stroke="#130F26" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                                                </g>
+                                            </g>
+                                        </svg><span>Add Courses</span>
+                                    </a>
+
+                                </li>
+
                                 <li class="sidebar-list">
                                     <a class="sidebar-link sidebar-title" href="Login">
                                         <i data-feather="log-out"> </i><span>Logout</span>
