--- a/Vitkund/Views/Shared/_Layout.cshtml
+++ b/Vitkund/Views/Shared/_Layout.cshtml
@@ -732,7 +732,7 @@
                             <li><a href="privacy-policy">Privacy Policy</a></li>
                             <li><a href="terms-and-condition">Terms and Condition</a></li>
                             <li><a href="refund-policy">Refund Policy</a></li>
-                            <li><a href="login">Login & Register</a></li>
+                            <li><a href="login">Login</a></li>
                         </ul>
                     </div>
                 </div>
