--- a/Vitkund/Views/Home/Signup.cshtml
+++ b/Vitkund/Views/Home/Signup.cshtml
@@ -192,7 +192,7 @@
                     $('#passwordError').text('');
                 } else {
                     passwordvalidation = false;
-                    $('#passwordError').text('Password must be One letter in Uppercase, Lowercase, Number and Special characters. Password Min Length 6. Eg: #Ram12');
+                    $('#passwordError').text('Password must be One letter in Uppercase, Lowercase, Number and Special characters. Password Min Length 6. (Ex: #Ram12)');
                 }
             });
             function validatePassword(password) {
