--- a/Vitkund/Views/Home/Index.cshtml
+++ b/Vitkund/Views/Home/Index.cshtml
@@ -53,10 +53,10 @@
                                             <div class="rbt-card-img">
                                                 <a href="#">
                                                     <img src="~/Content/assets/images/office.png" alt="Card image">
-                                                    <div class="rbt-badge-3 bg-white">
+                                                    @*<div class="rbt-badge-3 bg-white">
                                                         <span>-40%</span>
                                                         <span>Off</span>
-                                                    </div>
+                                                    </div>*@
                                                 </a>
                                             </div>
                                             <div class="rbt-card-body">
@@ -84,10 +84,10 @@
                                             <div class="rbt-card-img">
                                                 <a href="#">
                                                     <img src="~/Content/assets/images/off2.png" alt="Card image">
-                                                    <div class="rbt-badge-3 bg-white">
+                                                    @*<div class="rbt-badge-3 bg-white">
                                                         <span>-40%</span>
                                                         <span>Off</span>
-                                                    </div>
+                                                    </div>*@
                                                 </a>
                                             </div>
                                             <div class="rbt-card-body">
@@ -115,10 +115,10 @@
                                             <div class="rbt-card-img">
                                                 <a href="#">
                                                     <img src="~/Content/assets/images/off3.png" alt="Card image">
-                                                    <div class="rbt-badge-3 bg-white">
+                                                    @*<div class="rbt-badge-3 bg-white">
                                                         <span>-40%</span>
                                                         <span>Off</span>
-                                                    </div>
+                                                    </div>*@
                                                 </a>
                                             </div>
                                             <div class="rbt-card-body">
