--- a/Vitkund/Views/Home/Result.cshtml
+++ b/Vitkund/Views/Home/Result.cshtml
@@ -364,7 +364,7 @@
                     </ul>
                 </div>
 
-                <h1 style="color:#f9ba34;text-align:center"><i>Congratulation</i></h1>
+                <h1 style="color:#f9ba34;text-align:center"><i>Congratulations</i></h1>
                 <span id="finalresult" style="color:red;text-align:center"></span>
                 <br />
                 @if (Model != null)
@@ -548,35 +548,35 @@
             $(".keyone").css("color", "#fff");
             $(".keyone").css("padding", "10px");
             $('#finalresult').show();
-            $('#finalresult').text("You are Extremly Recommended for Bussiness");
+            $('#finalresult').text("You are Extremly Recommended for Business");
         }
         else if (totalsum >= 70 & totalsum <= 75) {
             $(".keytwo").css("background-color", "Green");
             $(".keytwo").css("color", "#fff");
             $(".keytwo").css("padding", "10px");
             $('#finalresult').show();
-            $('#finalresult').text("You are Highly Recommended for Bussiness");
+            $('#finalresult').text("You are Highly Recommended for Business");
         }
         else if (totalsum >= 60 & totalsum <= 69) {
             $(".keythree").css("background-color", "yellow");
             $(".keythree").css("color", "#333");
             $(".keythree").css("padding", "10px");
             $('#finalresult').show();
-            $('#finalresult').text("You are Recommended for Bussiness");
+            $('#finalresult').text("You are Recommended for Business");
         }
         else if (totalsum >= 50 & totalsum <= 59) {
             $(".keyfour").css("background-color", "yellow");
             $(".keyfour").css("color", "#333");
             $(".keyfour").css("padding", "10px");
             $('#finalresult').show();
-            $('#finalresult').text("Recommended for Bussiness");
+            $('#finalresult').text("Recommended for Business");
         }
         else if (totalsum >= 40 & totalsum <= 49) {
             $(".keysix").css("background-color", "Red");
             $(".keysix").css("color", "White");
             $(".keysix").css("padding", "10px");
             $('#finalresult').show();
-            $('#finalresult').text("Need Improvment for Bussiness");
+            $('#finalresult').text("Need Improvment for Business");
             $("#payNow").prop('disabled', true);
         }
         else if (totalsum >= 0 & totalsum <= 39) {
@@ -584,7 +584,7 @@
             $(".keyfive").css("color", "White");
             $(".keyfive").css("padding", "10px");
             $('#finalresult').show();
-            $('#finalresult').text("You are not Recommended for Bussiness");
+            $('#finalresult').text("You are not Recommended for Business");
             $("#payNow").prop('disabled', true);
         }
         else {
