--- a/Vitkund/Views/Home/Vitkund.cshtml
+++ b/Vitkund/Views/Home/Vitkund.cshtml
@@ -72,7 +72,7 @@
             </div>*@
             <div class="modal-body text-center" style="padding-top:30px;">
                 <img src="~/Content/assets/images/sad.png" /><br /><br />
-                <span> <b>We don't provide job.</b> <br />If You are interested in Business then Select Business</span>
+                <span> <b>We only provide business training</b> <br />If You are interested in Business then Select Business</span>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary close" data-dismiss="modal">Close</button>
