--- a/Vitkund/Views/Shared/_Layout.cshtml
+++ b/Vitkund/Views/Shared/_Layout.cshtml
@@ -70,8 +70,8 @@
                                     <div class="rbt-header-top-news">
                                         <div class="inner">
                                             <div class="content">
-                                                <span class="rbt-badge variation-02 bg-color-primary color-white radius-round">Hot</span>
-                                                <span class="news-text"><img src="~/Content/assets/images/icons/hand-emojji.svg" alt="Hand Emojji Images"> Vit kund Business Guides -95% off.</span>
+                                                @*<span class="rbt-badge variation-02 bg-color-primary color-white radius-round">Hot</span>*@
+                                                <span class="news-text"><img src="~/Content/assets/images/icons/hand-emojji.svg" alt="Hand Emojji Images">  वित्तकुंड गांव में आपका स्वागत हैं!</span>
                                             </div>
                                         </div>
                                     </div>
@@ -264,6 +264,7 @@
                                 <li><a href="/about-us">About Us</a></li>
                                 <li><a href="/course">Courses</a></li>
                                 <li><a href="/plan">Plan</a></li>
+                                <li><a href="/videos">Course Videos</a></li>
                                 <li><a href="/our-services">Our Services</a></li>
                                 <li><a href="/faq">FAQ</a></li>
                                 <li><a href="/contact-us">Contact Us</a></li>
