--- a/Vitkund/Views/Home/BusinessIdeaDetail.cshtml
+++ b/Vitkund/Views/Home/BusinessIdeaDetail.cshtml
@@ -78,7 +78,8 @@
                                 @Model.ShortDescription
                             </p>
 
-                            <p>@Model.LongDescription</p>
+                          
+                            <p>  @Html.Raw(Model.LongDescription)</p>
 
                         </div>
                     </div>
