--- a/Vitkund/Views/Home/AddCourses.cshtml
+++ b/Vitkund/Views/Home/AddCourses.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>AddCourses</h2>
+<link rel="stylesheet" type="text/css" href="https://unpkg.com/trix@2.0.0/dist/trix.css">
 <div class="page-body">
 
     <!-- Container-fluid starts-->
@@ -46,7 +46,9 @@
                                 <div class="col-sm-12">
                                     <div class="mb-3">
                                         <label>Long Description</label>&nbsp;<span style="color:red" id="maxvalspanlongdesc"></span><span style="color:red;display:none" id="longdescrequired">Required !!</span>
-                                        <textarea class="form-control" type="text" id="Longdescriptiontxtbox" placeholder="Long Description"></textarea>
+                                        @*<textarea class="form-control" type="text" id="Longdescriptiontxtbox" placeholder="Long Description"></textarea>*@
+                                        <trix-editor id="Longdescriptiontxtbox" angular-trix ng-model="trix" class="trix-content" placeholder="Long Description"></trix-editor>
+
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
@@ -100,36 +102,36 @@
                         <div class="row my-gallery gallery-with-description" itemscope="" data-pswp-uid="2">
                             @foreach (var item1 in Model)
                             {
-                            <figure class="col-xl-3 col-6 xl-33" itemprop="associatedMedia" itemscope="">
-                                <div style="float:right; margin-right:38px;">
-                                    <a class="icon-wrapper" href="javascript:void(0);" onclick="DeleteVideo(@item1.Id)"><i class="icofont icofont-trash"></i></a>
-                                </div>
-                                <div style="float:right; margin-right:76px;">
-                                    <a class="icon-wrapper" href="javascript:void(0);" onclick="EditVideo(@item1.Id)"><i class="icofont icofont-pencil"></i></a>
-                                </div>
-                                <a href="!#">
+                                <figure class="col-xl-3 col-6 xl-33" itemprop="associatedMedia" itemscope="">
+                                    <div style="float:right; margin-right:38px;">
+                                        <a class="icon-wrapper" href="javascript:void(0);" onclick="DeleteVideo(@item1.Id)"><i class="icofont icofont-trash"></i></a>
+                                    </div>
+                                    <div style="float:right; margin-right:76px;">
+                                        <a class="icon-wrapper" href="javascript:void(0);" onclick="EditVideo(@item1.Id)"><i class="icofont icofont-pencil"></i></a>
+                                    </div>
+                                    <a href="!#">
 
-                                    @if (@item1.Image.Contains("Content"))
+                                        @if (@item1.Image.Contains("Content"))
                                         {
-                                    <img src="@item1.Image" itemprop="thumbnail" alt="Image description">
+                                            <img src="@item1.Image" itemprop="thumbnail" alt="Image description">
                                         }
                                         else
                                         {
-                                    <img src="~/Content/Uploads/@item1.Image" itemprop="thumbnail" alt="Image description">
+                                            <img src="~/Content/Uploads/@item1.Image" itemprop="thumbnail" alt="Image description">
                                         }
 
-                                    <div class="caption">
-                                        <h4>@item1.Title</h4>
-                                        <span class="clsshortdescription">@item1.ShortDescription</span>
-                                        <br />
-                                        @if (!string.IsNullOrEmpty(item1.FromPrice.ToString()) && !string.IsNullOrEmpty(item1.ToPrice.ToString()))
+                                        <div class="caption">
+                                            <h4>@item1.Title</h4>
+                                            <span class="clsshortdescription">@item1.ShortDescription</span>
+                                            <br />
+                                            @if (!string.IsNullOrEmpty(item1.FromPrice.ToString()) && !string.IsNullOrEmpty(item1.ToPrice.ToString()))
                                             {
-                                        <span class="classprice">Price Range :- @item1.FromPrice - @item1.ToPrice</span>
+                                                <span class="classprice">Price Range :- @item1.FromPrice - @item1.ToPrice</span>
                                             }
-                                    </div>
-                                </a>
+                                        </div>
+                                    </a>
 
-                            </figure>
+                                </figure>
                             }
 
 
@@ -144,6 +146,8 @@
 </div>
 
 <script src="~/Scripts/jquery-3.4.1.js"></script>
+<script type="text/javascript" src="https://unpkg.com/trix@2.0.0/dist/trix.umd.min.js"></script>
+
 <script>
     var validation = false;
     var titlevalidation = true;
@@ -207,6 +211,7 @@
             } else {
                 $('#validationMessageimageupload').text('');
             }
+            $("#uplaoderimagevalue").text("");
             $("#uplaoderimagevalue").hide();
         });
         $('#frompricetxtbox').on('input', function () {
@@ -248,16 +253,20 @@
         var longdescription = $("#Longdescriptiontxtbox").val();
         var fromprice = $("#frompricetxtbox").val();
         var toprice = $("#topricetxtbox").val();
-        var formData = new FormData();
-        formData.append('file', $("#imageuploader")[0].files[0]);
-        if (titlevalidation == true && shortdescvalidation == true && formpricevalidation == true && topricevalidation == true)
-            validation = true
-        else
-            validation = false;
-        var imagevalid = $("#imageuploader")[0].files[0];
-        if (imagevalid == undefined && $("#uplaoderimagevalue").text()=="")
-            validation = false;
-
+        var fileImage = $("#uplaoderimagevalue").text();
+        if (fileImage == null || fileImage == "") {
+            var formData = new FormData();
+            formData.append('file', $("#imageuploader")[0].files[0]);
+            if (titlevalidation == true && shortdescvalidation == true && formpricevalidation == true && topricevalidation == true)
+                validation = true
+            else
+                validation = false;
+            var imagevalid = $("#imageuploader")[0].files[0];
+            if (imagevalid == undefined && $("#uplaoderimagevalue").text() == "")
+                validation = false;
+        } else {
+            validation = true;
+        }
         //validation checking
         if (title == "") { $("#titlerequired").show(); requiredval = false; } else { $("#titlerequired").hide(); requiredval = true; }
         if (shortdescription == "") { $("#shortdescrequired").show(); requiredval = false; } else { $("#shortdescrequired").hide(); requiredval = true; }
@@ -266,22 +275,27 @@
         if (toprice == "") { $("#topricerequired").show(); requiredval = false; } else { $("#topricerequired").hide(); requiredval = true; }
         //validation checking
 
-        if (requiredval ==true && validation == true) {
-            $.ajax({
-                url: '@Url.Action("UploadCourseFile", "Home")',
-                type: 'POST',
-                data: formData,
-                contentType: false,
-                processData: false,
-                success: function (response) {
-                    var tblCoursedata = { Id: Id, Title: title, Image: response, ShortDescription: shortdescription, LongDescription: longdescription, Fromprice: fromprice, Toprice: toprice };
-                    finaladdmodal(tblCoursedata);
-                },
-                error: function (error) {
-                    // Handle errors
-                    console.log(error);
-                }
-            });
+        if (requiredval == true && validation == true) {
+            if (fileImage != "") {
+                var tblBusinessideadata = { Id: Id, Title: title, Image: fileImage, ShortDescription: shortdescription, LongDescription: longdescription, fromprice: fromprice, toprice: toprice };
+                finaladdmodal(tblBusinessideadata);
+            } else {
+                $.ajax({
+                    url: '@Url.Action("UploadCourseFile", "Home")',
+                    type: 'POST',
+                    data: formData,
+                    contentType: false,
+                    processData: false,
+                    success: function (response) {
+                        var tblCoursedata = { Id: Id, Title: title, Image: response, ShortDescription: shortdescription, LongDescription: longdescription, Fromprice: fromprice, Toprice: toprice };
+                        finaladdmodal(tblCoursedata);
+                    },
+                    error: function (error) {
+                        // Handle errors
+                        console.log(error);
+                    }
+                });
+            }
         }
         else { }
 
