--- a/Vitkund/Views/Home/CourseDetails.cshtml
+++ b/Vitkund/Views/Home/CourseDetails.cshtml
@@ -66,83 +66,10 @@
                                 <div class="section-title">
                                     <h4 class="rbt-title-style-3">@Model.Title</h4>
                                 </div>
-                                <p>
-                                    Are you new to PHP or need a refresher? Then this course will help you get
-                                    all the fundamentals of Procedural PHP, Object Oriented PHP, MYSQLi and
-                                    ending the course by building a CMS system similar to WordPress, Joomla or
-                                    Drupal. Knowing PHP has allowed me to make enough money to stay home and
-                                    make courses like this one for students all over the world.
-                                </p>
+                                <p>  @Html.Raw(Model.LongDescription)</p>
 
-                                <div class="row g-5 mb--30">
-                                    <!-- Start Feture Box  -->
-                                    <div class="col-lg-6">
-                                        <ul class="rbt-list-style-1">
-                                            <li>
-                                                <i class="feather-check"></i>Become an advanced, confident, and
-                                                modern
-                                                JavaScript developer from scratch.
-                                            </li>
-                                            <li>
-                                                <i class="feather-check"></i>Have an intermediate skill level of
-                                                Python
-                                                programming.
-                                            </li>
-                                            <li>
-                                                <i class="feather-check"></i>Have a portfolio of various data
-                                                analysis
-                                                projects.
-                                            </li>
-                                            <li>
-                                                <i class="feather-check"></i>Use the numpy library to create and
-                                                manipulate
-                                                arrays.
-                                            </li>
-                                        </ul>
-                                    </div>
-                                    <!-- End Feture Box  -->
-                                    <!-- Start Feture Box  -->
-                                    <div class="col-lg-6">
-                                        <ul class="rbt-list-style-1">
-                                            <li>
-                                                <i class="feather-check"></i>Use the Jupyter Notebook
-                                                Environment.
-                                                JavaScript developer from scratch.
-                                            </li>
-                                            <li>
-                                                <i class="feather-check"></i>Use the pandas module with Python
-                                                to create and
-                                                structure data.
-                                            </li>
-                                            <li>
-                                                <i class="feather-check"></i>Have a portfolio of various data
-                                                analysis
-                                                projects.
-                                            </li>
-                                            <li>
-                                                <i class="feather-check"></i>Create data visualizations using
-                                                matplotlib and
-                                                the seaborn.
-                                            </li>
-                                        </ul>
-                                    </div>
-                                    <!-- End Feture Box  -->
-                                </div>
-                                <p>
-                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis, aliquam
-                                    voluptas laudantium incidunt architecto nam excepturi provident rem laborum
-                                    repellendus placeat neque aut doloremque ut ullam, veritatis nesciunt iusto
-                                    officia alias, non est vitae. Eius repudiandae optio quam alias aperiam nemo
-                                    nam tempora, dignissimos dicta excepturi ea quo ipsum omnis maiores
-                                    perferendis commodi voluptatum facere vel vero. Praesentium quisquam iure
-                                    veritatis, perferendis adipisci sequi blanditiis quidem porro eligendi
-                                    fugiat facilis inventore amet delectus expedita deserunt ut molestiae modi
-                                    laudantium, quia tenetur animi natus ea. Molestiae molestias ducimus
-                                    pariatur et consectetur. Error vero, eum soluta delectus necessitatibus
-                                    eligendi numquam hic at?
-                                </p>
                             </div>
-                            <div class="rbt-show-more-btn">Show More</div>
+                           
                         </div>
                         <!-- End Course Feature Box  -->
 
