--- a/Vitkund/Views/Home/BusinessIdeaDetail.cshtml
+++ b/Vitkund/Views/Home/BusinessIdeaDetail.cshtml
@@ -109,7 +109,7 @@
                          End Viedo Wrapper  -->
 
                         <div class="content-item-content">
-                            <div class="rbt-price-wrapper d-flex flex-wrap align-items-center justify-content-between">
+                            @*<div class="rbt-price-wrapper d-flex flex-wrap align-items-center justify-content-between">
                                 <div class="rbt-price">
                                     <span class="current-price">₹@Model.fromPrice</span>
                                 </div>
@@ -118,7 +118,7 @@
                                         <i class="feather-clock"></i> 3 days left!
                                     </span>
                                 </div>
-                            </div>
+                            </div>*@
 
 
                             <div class="buy-now-btn mt--15">
@@ -128,9 +128,9 @@
                                 </a>
                             </div>
 
-                            <span class="subtitle">
+                            @*<span class="subtitle">
                                 <i class="feather-rotate-ccw"></i> 3 Day Money-Back Guarantee
-                            </span>
+                            </span>*@
 
 
                             <!----<div class="rbt-widget-details has-show-more">
