--- a/Vitkund/Views/Home/CourseDetails.cshtml
+++ b/Vitkund/Views/Home/CourseDetails.cshtml
@@ -96,7 +96,7 @@
                          End Viedo Wrapper  -->
 
                         <div class="content-item-content">
-                            <div class="rbt-price-wrapper d-flex flex-wrap align-items-center justify-content-between">
+                            @*<div class="rbt-price-wrapper d-flex flex-wrap align-items-center justify-content-between">
                                 <div class="rbt-price">
                                     <span class="current-price">₹@Model.FromPrice</span>
                                 </div>
@@ -105,19 +105,23 @@
                                         <i class="feather-clock"></i> 3 days left!
                                     </span>
                                 </div>
-                            </div>
+                            </div>*@
 
 
                             <div class="buy-now-btn mt--15">
-                                <a class="rbt-btn btn-border icon-hover w-100 d-block text-center" href="#">
-                                    <span class="btn-text">Buy Now</span>
-                                    <span class="btn-icon"><i class="feather-arrow-right"></i></span>
+                                <a class="rbt-btn btn-gradient hover-icon-reverse btn-md w-100 d-block text-center" href="/vitkund">
+                                    <span class="icon-reverse-wrapper">
+                                        <span class="btn-text">Buy Now</span>
+                                        <span class="btn-icon"><i class="feather-arrow-right"></i></span>
+                                        <span class="btn-icon"><i class="feather-arrow-right"></i></span>
+                                    </span>
                                 </a>
+                             
                             </div>
 
-                            <span class="subtitle">
+                            @*<span class="subtitle">
                                 <i class="feather-rotate-ccw"></i> 3 Day Money-Back Guarantee
-                            </span>
+                            </span>*@
 
 
                             <!----<div class="rbt-widget-details has-show-more">
@@ -316,7 +320,7 @@
                         <span class="current-price color-primary">₹5000</span>
                     </div>
                     <div class="rbt-single-list action-btn">
-                        <a class="rbt-btn btn-gradient hover-icon-reverse btn-md" href="#">
+                        <a class="rbt-btn btn-gradient hover-icon-reverse btn-md" href="/vitkund">
                             <span class="icon-reverse-wrapper">
                                 <span class="btn-text">Purchase Now</span>
                                 <span class="btn-icon"><i class="feather-arrow-right"></i></span>
